# kmflow

./: .current-version  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile.backend  Makefile  README.md  alembic.ini  docker-compose.on-prem.yaml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.claude/: settings.json
.claude/agents/: github-issues-manager.md  jira-manager.md  pipeline-orchestrator.md
.claude/commands/: code-audit.md  full-sdlc.md
.claude/config/: cdd-config.yaml  installation-record.json  label-taxonomy.yaml  project-management.yaml
.claude/hooks/: check-decision-log.sh  check-no-ci-pipelines.sh  detect-merge-to-main.sh  load-memory-bank-light.sh  post-merge-hook.sh  post-pipeline-evidence.sh  post-pr-creation.sh  pr-created-hook.sh  pre-commit-route-check.sh  prevent-traditional-pipelines.js  session-end.sh  validate-cdd-evidence.sh
.claude/memory-bank/: activeContext.md  decisionLog.md  platformState.md
.claude/rules/: coding-standards.md  engagement-access.md  error-handling.md  fastapi-routes.md  frontend-docker-build.md  post-merge-updates.md  pr-auto-review.md  pr-review-workflow.md  presentation-deployment.md  type-safety.md
.claude/scripts/: cdd-compliance-report.sh  gh-setup.sh  gh-sync-labels.sh  install-hooks.sh
.claude/utils/: checkbox-updater-base.js  github-checkbox-updater.js
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: agent-release.yml  ci.yml  windows-agent-matrix.yml  windows-agent-sign.yml  windows-agent.yml
agent/macos/: Makefile  Package.swift
agent/python/: pyproject.toml  requirements.txt
agent/python/kmflow_agent/: __init__.py  __main__.py  auth.py
agent/python/kmflow_agent/aggregator/: __init__.py
agent/python/kmflow_agent/buffer/: __init__.py  encryption.py  manager.py
agent/python/kmflow_agent/config/: __init__.py  manager.py
agent/python/kmflow_agent/gdpr/: __init__.py  audit_logger.py  purge.py  retention.py
agent/python/kmflow_agent/health/: __init__.py  reporter.py
agent/python/kmflow_agent/ipc/: __init__.py  protocol.py  socket_server.py
agent/python/kmflow_agent/pii/: __init__.py  l2_filter.py  patterns.py
agent/python/kmflow_agent/platform/: __init__.py  _base.py  _macos.py  _windows.py
agent/python/kmflow_agent/upload/: __init__.py  batch_uploader.py
agent/python/kmflow_agent/vce/: __init__.py  classifier.py  ocr.py  record.py  redactor.py  trigger_engine.py
agent/python/tests/: conftest.py  test_auth.py  test_buffer_manager.py  test_encryption.py  test_gdpr_modules.py  test_l2_filter.py  test_platform.py  test_protocol.py  test_retention.py
agent/python/tests/gdpr/: test_audit_logger.py  test_purge.py
agent/python/tests/ipc/: test_socket_server.py
agent/python/tests/test_vce/: test_classifier.py  test_redactor.py  test_trigger_engine.py
agent/python/tests/upload/: test_batch_uploader.py
agent/windows/: KMFlowAgent.sln
alembic/: env.py
alembic/versions/: 001_enable_pgvector_and_create_core_tables.py  002_add_team_field_to_engagements.py  003_create_audit_logs_table.py  004_add_evidence_fields_shelf_requests.py  005_create_security_tables.py  006_create_pov_tables.py  007_create_regulatory_tables.py  008_create_tom_tables.py  009_create_monitoring_tables.py  010_create_patterns_simulation_tables.py  011_add_phase4_security_tables.py  012_create_conformance_tables.py  013_add_phase5_tables.py  014_add_phase8_tables.py  015_add_data_layer_evolution_tables.py  016_add_scenario_workbench.py  017_add_epistemic_actions.py  018_add_phase4_models.py  019_add_engagement_id_to_suggestions.py  020_fix_fk_ondelete_constraints.py  021_fix_pattern_embedding_type.py  022_add_missing_indexes_and_constraints.py  023_add_gdpr_fields.py  024_add_copilot_messages_created_at_index.py  025_audit_log_engagement_fk_set_null.py  026_add_evidence_classification_column.py  027_create_task_mining_tables.py  028_create_consent_records_table.py  029_add_missing_fk_indexes.py  030_add_fk_indexes_conformance_taskmining.py  031_add_confidence_model_columns.py  032_create_survey_epistemic_tables.py  033_create_conflict_objects_table.py  034_create_seed_terms_table.py  035_create_semantic_relationships_table.py  036_shelf_data_request_enhancements.py  037_add_quality_weights_to_engagements.py  038_add_evidence_metadata_columns.py  039_enable_engagement_rls.py  040_audit_log_enhancements.py  (+56 more)
docker/: backend-entrypoint.sh
docker/cib7/: bpm-platform.xml
docker/init-scripts/: 00-create-databases.sh  00-create-databases.sql
docs/: architecture.md  audit-lessons-learned.md  audit-report-latest.md  deployment.md  security-audit-report.md
docs/analysis/: KMFlow-vs-WGI-Gap-Analysis.md
docs/architecture/: KM4ProcessBot_v2.1_with_proposed_additions.docx  KMFlow_v3.2_with_proposed_additions.docx  adr-dependency-version-strategy.md  agent-security-decisions.md  bpmn-generation-pipeline.docx  bpmn-generation-pipeline.md  data-layer-evolution-pov.md  databricks-upgrade-runbook.md  km4processbot-evidence-weighting-additions.docx  km4processbot-evidence-weighting-additions.md  state-street-apex-solution-architecture.md
docs/audit-findings/: A1-authz.md  A2-injection.md  A3-infra-security.md  B1-architecture.md  B2-data-integrity.md  B3-api-compliance.md  C1-python-quality.md  (+15 more)
frontend/: Dockerfile  jest.config.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
platform/: continuous-monitoring-workflow.bpmn  engagement-lifecycle-orchestration.bpmn  evidence-collection-workflow.bpmn  evidence-lifecycle-workflow.bpmn  pov-generation-workflow.bpmn  shelf-data-request-workflow.bpmn  tom-gap-analysis-workflow.bpmn
scripts/: bootstrap_db.py  build-airgap.sh  build-walkthrough-appendix.py  capture_presentation_screenshots.mjs  create-audit-issues.sh  evaluate_parsers.py  init-db.sql  migrate_embeddings.py  seed-bpmn.sh  seed_demo.py  seed_e2e.py  setup_neo4j.py  walkthrough-screenshots.mjs
tests/: conftest.py  helpers.py
(+1228 files in other folders)
